# expocket_project

./: README.md  hsa_324_data_khoa.py  pyproject.toml  requirements.txt
expocket_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_batch_screener.py  test_cleavage_predictor.py  test_double_screen.py  test_edit_engine.py  test_guide_designer.py  test_impact_predictor.py  test_mirna_context.py  test_mock_data.py  test_modification_db.py  test_modification_engine.py  test_nucleotide_properties.py  test_off_target.py  test_property_calculator.py  test_protein_descriptors.py  test_rna3d_layout.py  test_schema.py  test_sequence_utils.py  test_synthesis_db.py  test_synthesis_pathway.py  test_target_finder.py  test_virtual_screen.py
viewer/: __init__.py  __main__.py  app.py  config.py
viewer/chemistry/: __init__.py  batch_screener.py  cleavage_predictor.py  double_screen.py  mirna_context.py  modification_engine.py  synthesis_pathway.py  virtual_screen.py
viewer/data/: loader.py  mock_data.py  schema.py
viewer/encoding/: __init__.py  modification_db.py  nucleotide_properties.py  property_calculator.py  protein_descriptors.py  synthesis_db.py
viewer/genome_editing/: __init__.py  edit_engine.py  guide_designer.py  impact_predictor.py  off_target.py  sequence_utils.py  target_finder.py  tools.py
viewer/interaction/: controller.py
viewer/landscape/: scene.py  widgets.py
viewer/rna3d/: layout.py  pocket_scene.py  scene.py  widgets.py
viewer/ui/: batch_panel.py  chemistry_panel.py  editing_panel.py  gene_panel.py  (+4 more)
(+10 files in other folders)
