[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expocket-viewer"
version = "0.1.0"
description = "3D visualization of pre-miRNA DICER cleavage data"
requires-python = ">=3.10"
dependencies = [
    "pygfx>=0.5.0",
    "wgpu>=0.17.0",
    "PySide6>=6.6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "openpyxl>=3.1",
]

[project.scripts]
expocket-viewer = "viewer.__main__:main"

[tool.setuptools.packages.find]
include = ["viewer*"]
